--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "hardhat": "^2.24.2"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0"
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.14",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8"
   }
 }
