--- a/mint/package.json
+++ b/mint/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.34.0",
+    "@web3-storage/w3up-client": "^17.3.0",
     "clsx": "^2.1.1",
     "ethers": "^6.14.3",
     "ipfs": "^0.66.1",
@@ -19,7 +20,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "web3.storage": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
